Se reemplaza clase Persona por PersonaRegistro